new_gen/fileParser.py
# Generated from /home/needslyp/labs/sem6/YAPIS/yapsi_python/file.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class fileParser ( Parser ):

    grammarFileName = "file.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'++'", "'--'", "'<='", "'>='", "'=='", 
                     "'!='", "'for'", "'while'", "'and'", "'or'", "'not'", 
                     "'='", "','", "';'", "'('", "')'", "'{'", "'}'", "'['", 
                     "']'", "'.'", "'<'", "'>'", "'+'", "'-'", "'*'", "'/'", 
                     "'&'", "'return'", "'if'", "'else'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "AND", "OR", "NOT", "EQ", "COMMA", "SEMI", 
                      "LPAREN", "RPAREN", "LCURLY", "RCURLY", "LSQUARE", 
                      "RSQUARE", "DOT", "LTHEN", "MTHEN", "PLUS", "MINUS", 
                      "ASTERISK", "DIVISION", "UMPERSANT", "RETURN", "IF", 
                      "ELSE", "TYPE", "ELEMENT", "ID", "WS" ]

    RULE_program = 0
    RULE_stat = 1
    RULE_def = 2
    RULE_return = 3
    RULE_parameter = 4
    RULE_op = 5
    RULE_s_op = 6
    RULE_comp = 7
    RULE_expr = 8
    RULE_for_cycle = 9
    RULE_while_cycle = 10
    RULE_if_else = 11
    RULE_list = 12
    RULE_iter = 13
    RULE_func = 14
    RULE_stat_box = 15

    ruleNames =  [ "program", "stat", "def", "return", "parameter", "op", 
                   "s_op", "comp", "expr", "for_cycle", "while_cycle", "if_else", 
                   "list", "iter", "func", "stat_box" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    AND=9
    OR=10
    NOT=11
    EQ=12
    COMMA=13
    SEMI=14
    LPAREN=15
    RPAREN=16
    LCURLY=17
    RCURLY=18
    LSQUARE=19
    RSQUARE=20
    DOT=21
    LTHEN=22
    MTHEN=23
    PLUS=24
    MINUS=25
    ASTERISK=26
    DIVISION=27
    UMPERSANT=28
    RETURN=29
    IF=30
    ELSE=31
    TYPE=32
    ELEMENT=33
    ID=34
    WS=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(fileParser.EOF, 0)

        def def_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fileParser.DefContext)
            else:
                return self.getTypedRuleContext(fileParser.DefContext,i)


        def getRuleIndex(self):
            return fileParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = fileParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==32:
                self.state = 32
                self.def_()
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 38
            self.match(fileParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(fileParser.TYPE, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(fileParser.ID)
            else:
                return self.getToken(fileParser.ID, i)

        def EQ(self):
            return self.getToken(fileParser.EQ, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fileParser.ExprContext)
            else:
                return self.getTypedRuleContext(fileParser.ExprContext,i)


        def SEMI(self):
            return self.getToken(fileParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(fileParser.COMMA)
            else:
                return self.getToken(fileParser.COMMA, i)

        def LPAREN(self):
            return self.getToken(fileParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(fileParser.RPAREN, 0)

        def if_else(self):
            return self.getTypedRuleContext(fileParser.If_elseContext,0)


        def for_cycle(self):
            return self.getTypedRuleContext(fileParser.For_cycleContext,0)


        def while_cycle(self):
            return self.getTypedRuleContext(fileParser.While_cycleContext,0)


        def getRuleIndex(self):
            return fileParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = fileParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        self._la = 0 # Token type
        try:
            self.state = 96
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 40
                self.match(fileParser.TYPE)
                self.state = 41
                self.match(fileParser.ID)
                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==13:
                    self.state = 42
                    self.match(fileParser.COMMA)
                    self.state = 43
                    self.match(fileParser.ID)
                    self.state = 48
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 49
                self.match(fileParser.EQ)
                self.state = 50
                self.expr(0)
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==13:
                    self.state = 51
                    self.match(fileParser.COMMA)
                    self.state = 52
                    self.expr(0)
                    self.state = 57
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 58
                self.match(fileParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.match(fileParser.ID)
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==13:
                    self.state = 61
                    self.match(fileParser.COMMA)
                    self.state = 62
                    self.match(fileParser.ID)
                    self.state = 67
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 68
                self.match(fileParser.EQ)
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==15:
                    self.state = 69
                    self.match(fileParser.LPAREN)
                    self.state = 70
                    self.match(fileParser.TYPE)
                    self.state = 71
                    self.match(fileParser.RPAREN)


                self.state = 74
                self.expr(0)
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==13:
                    self.state = 75
                    self.match(fileParser.COMMA)
                    self.state = 76
                    self.expr(0)
                    self.state = 81
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 82
                self.match(fileParser.SEMI)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 84
                self.expr(0)
                self.state = 85
                self.match(fileParser.SEMI)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 87
                self.if_else()
                self.state = 88
                self.match(fileParser.SEMI)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 90
                self.for_cycle()
                self.state = 91
                self.match(fileParser.SEMI)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 93
                self.while_cycle()
                self.state = 94
                self.match(fileParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(fileParser.TYPE, 0)

        def ID(self):
            return self.getToken(fileParser.ID, 0)

        def LPAREN(self):
            return self.getToken(fileParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(fileParser.RPAREN, 0)

        def LCURLY(self):
            return self.getToken(fileParser.LCURLY, 0)

        def stat_box(self):
            return self.getTypedRuleContext(fileParser.Stat_boxContext,0)


        def RCURLY(self):
            return self.getToken(fileParser.RCURLY, 0)

        def SEMI(self):
            return self.getToken(fileParser.SEMI, 0)

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fileParser.ParameterContext)
            else:
                return self.getTypedRuleContext(fileParser.ParameterContext,i)


        def return_(self):
            return self.getTypedRuleContext(fileParser.ReturnContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(fileParser.COMMA)
            else:
                return self.getToken(fileParser.COMMA, i)

        def getRuleIndex(self):
            return fileParser.RULE_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDef" ):
                listener.enterDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDef" ):
                listener.exitDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDef" ):
                return visitor.visitDef(self)
            else:
                return visitor.visitChildren(self)




    def def_(self):

        localctx = fileParser.DefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(fileParser.TYPE)
            self.state = 99
            self.match(fileParser.ID)
            self.state = 100
            self.match(fileParser.LPAREN)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==32:
                self.state = 101
                self.parameter()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==13:
                    self.state = 102
                    self.match(fileParser.COMMA)
                    self.state = 103
                    self.parameter()
                    self.state = 108
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 114
            self.match(fileParser.RPAREN)
            self.state = 115
            self.match(fileParser.LCURLY)
            self.state = 116
            self.stat_box()
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 117
                self.return_()


            self.state = 120
            self.match(fileParser.RCURLY)
            self.state = 121
            self.match(fileParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(fileParser.RETURN, 0)

        def expr(self):
            return self.getTypedRuleContext(fileParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(fileParser.SEMI, 0)

        def getRuleIndex(self):
            return fileParser.RULE_return

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn" ):
                listener.enterReturn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn" ):
                listener.exitReturn(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn" ):
                return visitor.visitReturn(self)
            else:
                return visitor.visitChildren(self)




    def return_(self):

        localctx = fileParser.ReturnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_return)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(fileParser.RETURN)
            self.state = 124
            self.expr(0)
            self.state = 125
            self.match(fileParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(fileParser.TYPE, 0)

        def UMPERSANT(self):
            return self.getToken(fileParser.UMPERSANT, 0)

        def ID(self):
            return self.getToken(fileParser.ID, 0)

        def getRuleIndex(self):
            return fileParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = fileParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(fileParser.TYPE)
            self.state = 128
            self.match(fileParser.UMPERSANT)
            self.state = 129
            self.match(fileParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(fileParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(fileParser.MINUS, 0)

        def DIVISION(self):
            return self.getToken(fileParser.DIVISION, 0)

        def ASTERISK(self):
            return self.getToken(fileParser.ASTERISK, 0)

        def getRuleIndex(self):
            return fileParser.RULE_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp" ):
                listener.enterOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp" ):
                listener.exitOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOp" ):
                return visitor.visitOp(self)
            else:
                return visitor.visitChildren(self)




    def op(self):

        localctx = fileParser.OpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 251658240) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class S_opContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return fileParser.RULE_s_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterS_op" ):
                listener.enterS_op(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitS_op" ):
                listener.exitS_op(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitS_op" ):
                return visitor.visitS_op(self)
            else:
                return visitor.visitChildren(self)




    def s_op(self):

        localctx = fileParser.S_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_s_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            _la = self._input.LA(1)
            if not(_la==1 or _la==2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MTHEN(self):
            return self.getToken(fileParser.MTHEN, 0)

        def LTHEN(self):
            return self.getToken(fileParser.LTHEN, 0)

        def getRuleIndex(self):
            return fileParser.RULE_comp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComp" ):
                listener.enterComp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComp" ):
                listener.exitComp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComp" ):
                return visitor.visitComp(self)
            else:
                return visitor.visitChildren(self)




    def comp(self):

        localctx = fileParser.CompContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_comp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 12583032) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(fileParser.ID, 0)

        def ELEMENT(self):
            return self.getToken(fileParser.ELEMENT, 0)

        def list_(self):
            return self.getTypedRuleContext(fileParser.ListContext,0)


        def func(self):
            return self.getTypedRuleContext(fileParser.FuncContext,0)


        def iter_(self):
            return self.getTypedRuleContext(fileParser.IterContext,0)


        def NOT(self):
            return self.getToken(fileParser.NOT, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fileParser.ExprContext)
            else:
                return self.getTypedRuleContext(fileParser.ExprContext,i)


        def DOT(self):
            return self.getToken(fileParser.DOT, 0)

        def AND(self):
            return self.getToken(fileParser.AND, 0)

        def OR(self):
            return self.getToken(fileParser.OR, 0)

        def op(self):
            return self.getTypedRuleContext(fileParser.OpContext,0)


        def comp(self):
            return self.getTypedRuleContext(fileParser.CompContext,0)


        def s_op(self):
            return self.getTypedRuleContext(fileParser.S_opContext,0)


        def getRuleIndex(self):
            return fileParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = fileParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 138
                self.match(fileParser.ID)
                pass

            elif la_ == 2:
                self.state = 139
                self.match(fileParser.ELEMENT)
                pass

            elif la_ == 3:
                self.state = 140
                self.list_()
                pass

            elif la_ == 4:
                self.state = 141
                self.func()
                pass

            elif la_ == 5:
                self.state = 142
                self.iter_()
                pass

            elif la_ == 6:
                self.state = 143
                self.match(fileParser.NOT)
                self.state = 144
                self.expr(6)
                pass

            elif la_ == 7:
                self.state = 145
                self.match(fileParser.ID)
                self.state = 146
                self.match(fileParser.DOT)
                self.state = 147
                self.func()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 168
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 166
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                    if la_ == 1:
                        localctx = fileParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 150
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 151
                        self.match(fileParser.AND)
                        self.state = 152
                        self.expr(6)
                        pass

                    elif la_ == 2:
                        localctx = fileParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 153
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 154
                        self.match(fileParser.OR)
                        self.state = 155
                        self.expr(5)
                        pass

                    elif la_ == 3:
                        localctx = fileParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 156
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 157
                        self.op()
                        self.state = 158
                        self.expr(4)
                        pass

                    elif la_ == 4:
                        localctx = fileParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 160
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 161
                        self.comp()
                        self.state = 162
                        self.expr(3)
                        pass

                    elif la_ == 5:
                        localctx = fileParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 164
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 165
                        self.s_op()
                        pass

             
                self.state = 170
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class For_cycleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(fileParser.LPAREN, 0)

        def TYPE(self):
            return self.getToken(fileParser.TYPE, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(fileParser.ID)
            else:
                return self.getToken(fileParser.ID, i)

        def EQ(self):
            return self.getToken(fileParser.EQ, 0)

        def ELEMENT(self):
            return self.getToken(fileParser.ELEMENT, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(fileParser.COMMA)
            else:
                return self.getToken(fileParser.COMMA, i)

        def comp(self):
            return self.getTypedRuleContext(fileParser.CompContext,0)


        def expr(self):
            return self.getTypedRuleContext(fileParser.ExprContext,0)


        def s_op(self):
            return self.getTypedRuleContext(fileParser.S_opContext,0)


        def RPAREN(self):
            return self.getToken(fileParser.RPAREN, 0)

        def LCURLY(self):
            return self.getToken(fileParser.LCURLY, 0)

        def stat_box(self):
            return self.getTypedRuleContext(fileParser.Stat_boxContext,0)


        def RCURLY(self):
            return self.getToken(fileParser.RCURLY, 0)

        def getRuleIndex(self):
            return fileParser.RULE_for_cycle

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_cycle" ):
                listener.enterFor_cycle(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_cycle" ):
                listener.exitFor_cycle(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor_cycle" ):
                return visitor.visitFor_cycle(self)
            else:
                return visitor.visitChildren(self)




    def for_cycle(self):

        localctx = fileParser.For_cycleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_for_cycle)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(fileParser.T__6)
            self.state = 172
            self.match(fileParser.LPAREN)
            self.state = 173
            self.match(fileParser.TYPE)
            self.state = 174
            self.match(fileParser.ID)
            self.state = 175
            self.match(fileParser.EQ)
            self.state = 176
            self.match(fileParser.ELEMENT)
            self.state = 177
            self.match(fileParser.COMMA)
            self.state = 178
            self.match(fileParser.ID)
            self.state = 179
            self.comp()
            self.state = 180
            self.expr(0)
            self.state = 181
            self.match(fileParser.COMMA)
            self.state = 182
            self.match(fileParser.ID)
            self.state = 183
            self.s_op()
            self.state = 184
            self.match(fileParser.RPAREN)
            self.state = 185
            self.match(fileParser.LCURLY)
            self.state = 186
            self.stat_box()
            self.state = 187
            self.match(fileParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_cycleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(fileParser.LPAREN, 0)

        def TYPE(self):
            return self.getToken(fileParser.TYPE, 0)

        def ID(self):
            return self.getToken(fileParser.ID, 0)

        def comp(self):
            return self.getTypedRuleContext(fileParser.CompContext,0)


        def ELEMENT(self):
            return self.getToken(fileParser.ELEMENT, 0)

        def RPAREN(self):
            return self.getToken(fileParser.RPAREN, 0)

        def LCURLY(self):
            return self.getToken(fileParser.LCURLY, 0)

        def stat_box(self):
            return self.getTypedRuleContext(fileParser.Stat_boxContext,0)


        def RCURLY(self):
            return self.getToken(fileParser.RCURLY, 0)

        def getRuleIndex(self):
            return fileParser.RULE_while_cycle

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_cycle" ):
                listener.enterWhile_cycle(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_cycle" ):
                listener.exitWhile_cycle(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_cycle" ):
                return visitor.visitWhile_cycle(self)
            else:
                return visitor.visitChildren(self)




    def while_cycle(self):
